--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="stylee.css">
   </head>
   <body>
-  <div id="Section 279">
+  <div id="section-279">
 <p>Marriage Laws:<p>
 
 <p>The Indian Penal Code (IPC) primarily deals with criminal offenses in India and does not contain specific provisions regarding the laws governing marriage. Marriage in India is primarily governed by personal laws based on an individual's religion. The IPC does contain some provisions related to marital issues, but they are not the primary source of marriage laws in the country.
@@ -36,7 +36,7 @@ It's important to note that marriage laws in India can be complex due to the div
 </p>
 </div>
 
-<div id="Section 420">
+<div id="section-420">
 <p>Dowry Laws:</p>
 
 <p>Dowry laws in India are primarily addressed under the Indian Penal Code (IPC) and other related legislations. Dowry is the practice of giving or receiving gifts, property, or money by the bride's family to the groom or his family at the time of marriage. It is a significant social issue in India, often leading to harassment, violence, and even death of brides if the dowry demands are not met. To address this issue, specific provisions in the IPC were created, and a separate law, the Dowry Prohibition Act, 1961, was enacted.
@@ -57,7 +57,7 @@ It's important to note that while these laws are in place to protect women from 
 </p>
 </div>
 
-<div id="773">
+<div id="section-773">
   <p>mkc bc nhk kal ana kal</p>
 </div>
 
