--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="stylee.css">
   </head>
   <body>
-  <div id="section-279">
+  <div id="Financial Law">
 <p>Marriage Laws:<p>
 
 <p>The Indian Penal Code (IPC) primarily deals with criminal offenses in India and does not contain specific provisions regarding the laws governing marriage. Marriage in India is primarily governed by personal laws based on an individual's religion. The IPC does contain some provisions related to marital issues, but they are not the primary source of marriage laws in the country.
