--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Legal Cases</title>
 </head>
 <body>
-    <div id="PropertyLaw">
+    <div id="ContractLaw">
         <h1>Financial Law</h1>
         <p>Financial law deals with regulations related to the financial industry, including...</p>
     </div>
