--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Legal Cases</title>
 </head>
 <body>
-    <div id="ContractLaw">
+    <div class="ContractLaw">
         <h1>Financial Law</h1>
         <p>Financial law deals with regulations related to the financial industry, including...</p>
     </div>
-    <div id="FamilyLaw">
+    <div class="FamilyLaw">
         <h1>Family Law</h1>
         <p>Family law pertains to legal matters involving family relationships, such as...</p>
     </div>
