--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
         <p>Family law pertains to legal matters involving family relationships, such as...</p>
     </div>
     <!-- Add more legal cases as needed -->
+     <div class="CriminalLaw">
+        <h1>Family Law</h1>
+        <p>Family law pertains to legal matters involving family relationships, such as...</p>
+    </div>
 </body>
 </html>
