--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
         <h1>Family Law</h1>
         <p>Family law pertains to legal matters involving family relationships, such as...</p>
     </div>
+     <div class="DUI_Offense_Charge">
+        <h1>Family Law</h1>
+        <p>Family law pertains to legal matters involving family relationships, such as...</p>
+    </div>
 </body>
 </html>
